welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: not found: value h
		for (r <- 0 to h) {
                               ^