welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {


def posfinale(): Boolean = {
	var h = getMondeHauteur()-1;
	var l = getMondeLargeur()-1;
	if (getX() == l && getY() == h) {
		return true;
	} else {
		return false;
	}
	 
}


def deplace() = {
	if (estFaceMur()) {
		for (r <- 0 to h) {
			recule();
		}
		droite();
		avance();
		droite();
	} else {
		avance();
	}
}
deplace();
}
